Consultation et modification des informations

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=76cc39c6d58b6c4b0f5f9bda3dea413e
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL=mysql://root:nvettora@localhost:3306/projtut
+DATABASE_URL=mysql://root:@localhost:3306/projtut
 ###< doctrine/doctrine-bundle ###
